2.5.44 (2025-07-16)

- Code syntax highlighting added to the Code Interpreter tool.
- Image output functionality integrated into the Code Interpreter tool.
- Improved/fixed connection with Docker containers.
- Fixed parsing of integer parameters from plugins.

2.5.43 (2025-07-15)

- Improved IPython code execution.
- Added lock for kernel restarting in Code Interepreter to prevent crash if kernel not ready.

2.5.42 (2025-07-15)

- Connected Run code button in python code blocks to IPython (if enabled).
- Updated CSS.

2.5.41 (2025-07-14)

- Fixed: vector stores handling in Assistants API SDK.
- Added: Run button to Python code blocks for real-time code executing in Code Interpreter.
- Updated documentation.

2.5.40 (2025-07-14)

- Enhanced system prompts.
- Increased default Ollama request timeout to 300s.
- Improved function calling.
- Added option 'Tool calls (native)' to models config.

2.5.39 (2025-07-13)

- Improved multiple notepads handling.

2.5.38 (2025-07-13)

- Fixed: empty models list in presets editor.
- Fixed: focus to second column on open Code Interpreter dialog.
- Added: agent providers names.
- Added: ReAct (Workflow) agent.
- Improved: split-screen switch.

2.5.37 (2025-07-13)

- Improved multi-threading and async calls.
- Added loading spinner.
- Added live output from CodeAct agent.
- UI fixes.

2.5.36 (2025-07-12)

- Improved UI, updated CSS.
- Added: collapse/expand button to code blocks.
- Added: preview code button to HTML code blocks.
- Added: provider separators in models list.
- Added: grok-4 model.

2.5.35 (2025-07-11)

- Improved CodeAct Agent: extended prompt, added work directory handling, auto-installation of missing libraries, and generation of images and plots.

2.5.34 (2025-07-11)

- Added: tool calls in CodeAct Agent.
- Added: multimodal/vision in Chat with Files mode.

2.5.33 (2025-07-10)

- Added: CodeAct Agent, integrated with Code Interpreter plugin (beta).
- Fixed: IPython kernel restarting in Code Interpreter plugin.
