@@ -4,6 +4,7 @@
 - Image output functionality integrated into the Code Interpreter tool.
 - Improved/fixed connection with Docker containers.
 - Fixed parsing of integer parameters from plugins.
+- Fixed 'Add tool' option in tabs + button.
 
 2.5.43 (2025-07-15)
 
